SERVER-33538 Fix UUID inconsistencies in mapReduce on a sharded output collection

(cherry picked from commit b69e6725325aaaae4fcca7563bf6428837ab7767)