src/mongo/db/commands/mr.cpp
@@ -462,18 +462,6 @@ void State::prepTempCollection() {
         Collection* const finalColl = finalCtx.getCollection();
         if (finalColl) {
             finalOptions = finalColl->getCatalogEntry()->getCollectionOptions(_opCtx);
-            if (_config.finalOutputCollUUID) {
-                // The final output collection's UUID is passed from mongos if the final output
-                // collection is sharded. If a UUID was sent, ensure it matches what's on this
-                // shard.
-                uassert(ErrorCodes::InternalError,
-                        str::stream()
-                            << "UUID sent by mongos for sharded final output collection "
-                            << _config.outputOptions.finalNamespace.ns()
-                            << " does not match UUID for the existing collection with that "
-                               "name on this shard",
-                        finalColl->uuid() == _config.finalOutputCollUUID);
-            }
 
             IndexCatalog::IndexIterator ii =
                 finalColl->getIndexCatalog()->getIndexIterator(_opCtx, true);
@@ -1754,12 +1742,7 @@ public:
 
         Config config(dbname, cmdObj.firstElement().embeddedObjectUserCheck());
 
-        if (cmdObj["finalOutputCollIsSharded"].trueValue()) {
-            uassert(ErrorCodes::InvalidOptions,
-                    "This shard has feature compatibility version 3.6, so it expects mongos to "
-                    "send the UUID to use for the sharded output collection. Was the mapReduce "
-                    "request sent from a 3.4 mongos?",
-                    cmdObj.hasField("shardedOutputCollUUID"));
+        if (cmdObj.hasField("shardedOutputCollUUID")) {
             config.finalOutputCollUUID =
                 uassertStatusOK(UUID::parse(cmdObj["shardedOutputCollUUID"]));
         }
