jstests/sharding/mapReduce_outSharded.js
@@ -6,13 +6,8 @@ var verifyOutput = function(out) {
     assert.eq(out.counts.output, 512, "output count is wrong");
 };
 
-// TODO: SERVER-33599 remove shardAsReplicaSet: false
-var st = new ShardingTest({
-    shards: 2,
-    verbose: 1,
-    mongos: 1,
-    other: {chunkSize: 1, enableBalancer: true, shardAsReplicaSet: false}
-});
+var st = new ShardingTest(
+    {shards: 2, verbose: 1, mongos: 1, other: {chunkSize: 1, enableBalancer: true}});
 
 st.adminCommand({enablesharding: "mrShard"});
 st.ensurePrimaryShard('mrShard', st.shard1.shardName);
